--- a/package.json
+++ b/package.json
@@ -20,5 +20,7 @@
     "nodemon": "^2.0.20",
     "passport": "^0.6.0",
     "passport-local": "^1.0.0"
+  },"engines": {
+    "node": "14.17.3"
   }
 }
